--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <script>
         // --- 設定エリア ---
-        const LIFF_ID = "あなたのLIFF IDをここに貼り付け"; 
+        const LIFF_ID = "2009156481-8H1NbFct"; 
         const FORM_URL = "あなたのGoogleフォーム事前入力URLをここに貼り付け"; 
         // ----------------
 
