--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script>
         // --- 設定エリア ---
         const LIFF_ID = "2009156481-8H1NbFct"; 
-        const FORM_URL = "あなたのGoogleフォーム事前入力URLをここに貼り付け"; 
+        const FORM_URL = "https://docs.google.com/forms/d/e/1FAIpQLSdlUS6ZfRqFOaJ8t8jYf7VqbXwKorhTdxukCha9eaudxxpT5g/viewform?usp=pp_url&entry.131182360=DUMMY"; 
         // ----------------
 
         document.addEventListener("DOMContentLoaded", () => {
